--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-spring/three": "^9.7.4",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "framer-motion": "^11.11.1",
     "gsap": "^3.12.5",
     "p5": "^1.10.0",
     "react": "^18.3.1",
@@ -22,7 +23,8 @@
     "react-icons": "^5.3.0",
     "react-jss": "^10.10.0",
     "react-responsive": "^10.0.0",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@types/p5": "^1.7.6",
